# Adversarial_Generalisation

./: pyproject.toml
demos/: test_grpo_model.ipynb  test_sft_model.ipynb
experiments/GRPO_MBPP/: debug.py  main.py
experiments/GRPO_MBPP/configs/: base.yaml
experiments/GRPO_MBPP/configs/sft_sweep/: base.yaml  debug_sweep.yaml  sweep.yaml  sweep_2.yaml
experiments/GRPO_MBPP/functions/: train_grpo.py
experiments/GRPO_MBPP/results/grpo_mbpp_reward_hacking_2025-11-26_18-03-55/: logs.txt
experiments/GRPO_MBPP/results/sft_hacky_sweep/grpo_mbpp_hacky_100_sft_hacky_sweep/: config.yaml  logs.txt
experiments/GRPO_MBPP/results/sft_hacky_sweep/grpo_mbpp_hacky_125_sft_hacky_sweep/: config.yaml  logs.txt
experiments/choice_persona_RL/: main.py
experiments/choice_persona_RL/configs/: base.yaml  debug.yaml  zoom.yaml
experiments/choice_persona_RL/functions/: __init__.py  evaluator.py  reward.py  train_grpo.py
experiments/choice_persona_RL/results/persona_grpo_2025-12-04_17-05-00/: README.md  config.yaml  logs.txt
experiments/choice_persona_RL/results/persona_grpo_zoom_run_2025-12-04_17-53-06/: README.md  config.yaml  logs.txt
experiments/choice_persona_SFT/configs/: base.yaml  debug.yaml  sweep.yaml
experiments/choice_persona_SFT/functions/: data_preparation.py  evaluator.py  train_sft.py
experiments/choice_persona_SFT/results/arc_persona_sft_2025-12-04_15-31-11/: README.md  config.yaml  logs.txt
experiments/choice_persona_SFT/results/arc_persona_sft_2025-12-04_15-35-27/: README.md  config.yaml  logs.txt
lib/: arc_persona_data.py  saving_run.py
(+26 files in other folders)
